# lore

./: .gitignore  Cargo.toml  GRPC-REVISION-TREE-PLAN.md  PROGRESS.md  README.md  TaskInsights.md  common.ps1  pyproject.toml
.github/workflows/: publish-docs.yml
docs/developing/code-standards/: comments.md
docs/specs/: branch-merge-v1.md
lore/: build.rs  cbindgen.toml
lore-aws/src/: s3.rs
lore-aws/src/store/: immutable_store.rs
lore-base/src/types/: mod.rs
lore-capi/: lore.h
lore-chaos-client/src/lore/: interface.rs
lore-client/src/cli/: util.rs
lore-client/src/cli/commands/: branch.rs  file.rs  repository.rs
lore-error-set/tests/compile_fail/: forward_strict_missing_variant.stderr
lore-integration-tests/: Cargo.toml  README.md  compose.yaml
lore-integration-tests/src/: aws_store_test.rs  dynamodb_test.rs  hashicorp.rs  lib.rs  locks_test.rs  presign_test.rs  remote_store_test.rs  replication_service_test.rs  storage_remote_test.rs  storage_test.rs  store_fan_out_test.rs  store_keep_alive_test.rs
lore-integration-tests/src/common/: mod.rs
lore-integration-tests/src/hashicorp/: consul.rs
lore-integration-tests/src/hashicorp/consul/: client.rs  peer_discovery.rs
lore-notification/src/: lib.rs
lore-proto/proto/lore/revision/v1/: revision.proto
lore-proto/proto/lore/storage/v1/: storage.proto
lore-proto/proto/lore/thin_client/v1/: model.proto  thin_client.proto
lore-proto/src/grpc/: lore.revision.v1.rs  lore.storage.v1.rs  lore.thin_client.v1.rs
lore-proto/tests/: v1_revision.rs  v1_thin_client.rs
lore-revision/: README-PROTOCOLS.md
lore-revision/src/: branch.rs  commit.rs  event.rs  immutable.rs  lib.rs  lore.rs  merge_resolution.rs  node.rs  path_merge.rs  repository.rs  revision.rs  revision_tree.rs  state.rs
lore-revision/src/branch/: merge.rs  reset.rs
lore-revision/src/file/: stage.rs
lore-revision/src/repository/: create.rs  info.rs
lore-revision/src/revision/: cherry_pick.rs  restore.rs  revert.rs  sync.rs
lore-revision/src/store/: composite.rs
lore-revision/tests/: diff3_streaming.rs  immutable.rs  node_add_parallel.rs  repository_format.rs
lore-server/: Cargo.toml
lore-server/config/: dev-local.toml
lore-server/src/: server.rs
lore-server/src/grpc/: server.rs  storage_service.rs
lore-server/src/grpc/handlers/: repository_create.rs  repository_query.rs
lore-server/src/grpc/repository/v1/: repository_create.rs
lore-server/src/grpc/revision/v1/: branch_merge.rs  branch_push.rs  idempotency.rs  mod.rs  revision_create.rs  service.rs
lore-server/src/grpc/storage/v1/: mod.rs  presign_download.rs  service.rs  upload_content.rs
lore-server/src/grpc/thinclient/v1/: content_diff.rs  helpers.rs  mod.rs  revision_diff.rs  revision_file_download.rs  revision_tree.rs  service.rs
lore-server/src/hooks/: spacesync_events.rs
lore-server/src/http/: presign_token.rs  server.rs
lore-server/src/http/presigned/repository/: redeem.rs
lore-server/src/http/repositories/repository/contents/content/: get_repository_content.rs  presign_repository_content.rs
lore-server/src/protocol/: storage.rs
lore-server/src/protocol/storage/: messages.rs  presign_download.rs
lore-server/src/quic/: storage_service.rs  storage_service_v4.rs
lore-storage/src/: defragment.rs  immutable_store.rs  lib.rs  maintenance.rs  read.rs  stream_write.rs
lore-storage/src/local/: immutable_store.rs
lore-transport/: Cargo.toml
lore-transport/examples/: presign_download_bench.rs
lore-transport/src/: connection.rs  direct_download.rs  lib.rs  traits.rs  types.rs
lore-transport/src/auth/: mod.rs  ucs_auth.rs
lore-transport/src/grpc/: mod.rs  repository_client.rs  storage_client.rs
lore-transport/src/quic/: mod.rs  response_reader.rs
lore-transport/src/quic/storage_service/: client.rs  mod.rs
lore/src/: branch.rs  interface.rs  repository.rs
lore/src/remote/: command.rs
lore/src/revision_tree/: add.rs  commit.rs  delete.rs  handle.rs  info.rs  list_children.rs  load.rs  metadata_get.rs  metadata_set.rs  modify.rs  move_node.rs  node_info.rs  node_path.rs  resolve_path.rs
lore/src/storage/: get.rs  mod.rs
lore/tests/: events.rs  ffi_error_events.rs  file_write.rs  in_memory.rs  metadata.rs
scripts/test/: lore.py  test_branch.py  test_compact.py  test_merge_path_strategy.py  test_notifications.py  test_stage_parallel.py
