[package]
name = "lore-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
aws-sdk-dynamodb = { version = "1.92.0", default-features = false, features = ["rt-tokio"] }
aws-sdk-s3 = { version = "1.104.0", default-features = false, features = ["rt-tokio"] }
bytes = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
serde_json = { workspace = true }
rs-consul = "0.13.0"
rustls = { workspace = true, optional = true }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
tempfile = "3.21"
tokio = { workspace = true }
tokio-stream = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zerocopy = { workspace = true }
lore = { workspace = true }
lore-base = { workspace = true }
lore-storage = { workspace = true }
lore-aws = { workspace = true }
lore-revision = { workspace = true }
lore-hashicorp = { workspace = true }
lore-proto = { workspace = true }
lore-server = { workspace = true, features = ["integration_tests"] }
uuid = { workspace = true }

[features]
integration_tests = []
grpc_integration_tests = ["dep:tokio-stream", "dep:tonic"]
