[package]
name = "lore-server"
edition = "2024"
version.workspace = true
publish = false
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["env"] }
config = { workspace = true }
dashmap = { workspace = true }
diffy = { workspace = true }
enum_dispatch = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
parking_lot = { workspace = true }
pin-project = { workspace = true }
postgres = { workspace = true }
prost-types = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
smallvec = { workspace = true }
socket2 = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-metrics = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["timeout", "trace"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-ecs = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
lore-base = { workspace = true }
lore-aws = { workspace = true }
lore-hashicorp = { workspace = true }
lore-storage = { workspace = true }
lore-revision = { workspace = true }
lore-transport = { workspace = true }
lore-error-set = { workspace = true }
lore-macro = { workspace = true }
lore-notification = { workspace = true }
lore-proto = { workspace = true }
lore-telemetry = { workspace = true }
uuid = { workspace = true }
x509-parser = { workspace = true }
zerocopy = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-prost-build = { workspace = true }
vergen = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
axum-test = "18.1.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
indexmap = { workspace = true }
mockall = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
temp-env = { workspace = true }

[features]
default = []
oodle = ["lore-revision/oodle"]
integration_tests = []
test_random = []
seeding = ["lore-revision/seeding"]
# Enables fault-injection in the storage layer (e.g. LORE_MISS_FRAGMENT_WRITES).
# Used by smoke tests that exercise missing-fragment recovery paths.
failure_generator = ["lore-storage/failure_generator"]

[[bin]]
name = "loreserver"

[lib]
name = "lore_server"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
